src/objects/Personality_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Agreeableness__c</fullName>
        <label>Agreeableness</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Analysis_Summary__c</fullName>
        <label>Analysis Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conscientiousness__c</fullName>
        <label>Conscientiousness</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personality Profiles</relationshipLabel>
        <relationshipName>Personality_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extraversion__c</fullName>
        <label>Extraversion</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Neuroticism__c</fullName>
        <label>Neuroticism</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Openness__c</fullName>
        <label>Openness</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Twitter</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Personality Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Neuroticism__c</columns>
        <columns>Openness__c</columns>
        <columns>Extraversion__c</columns>
        <columns>Conscientiousness__c</columns>
        <columns>Agreeableness__c</columns>
        <columns>Analysis_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personality Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>